[package]
name = "bevy_contrib_schedules"
version = "0.1.0"
authors = ["Sean Kaufman <sean.kaufman92@gmail.com>"]
edition = "2018"
license = "cc0"
repository = "https://github.com/thebluefish/bevy_contrib_schedules"

[dependencies]
log = "0.4"
#bevy = "0.2.1"
bevy = { git = "https://github.com/bevyengine/bevy" }

[dev-dependencies]
simple_logger = "1"